; ModuleID = '/home/carl/AnghaBench/tengine/modules/ngx_debug_timer/extr_ngx_http_debug_timer_module.c_ngx_http_debug_timer.c'
source_filename = "/home/carl/AnghaBench/tengine/modules/ngx_debug_timer/extr_ngx_http_debug_timer_module.c_ngx_http_debug_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@ngx_http_core_module = common dso_local global i32 0, align 4
@ngx_http_debug_timer_handler = common dso_local global i32 0, align 4
@NGX_CONF_OK = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i32*, i8*)* @ngx_http_debug_timer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ngx_http_debug_timer(i32* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = load i32, i32* @ngx_http_core_module, align 4
  %10 = call %struct.TYPE_3__* @ngx_http_conf_get_module_loc_conf(i32* %8, i32 %9)
  store %struct.TYPE_3__* %10, %struct.TYPE_3__** %7, align 8
  %11 = load i32, i32* @ngx_http_debug_timer_handler, align 4
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 4
  %14 = load i8*, i8** @NGX_CONF_OK, align 8
  ret i8* %14
}

declare dso_local %struct.TYPE_3__* @ngx_http_conf_get_module_loc_conf(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
